--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
                 <div class="profile-photo">
                     <img src="./img/perfil-instagram.jpg" alt="Foto de perfil">
                 </div>
-                <a href="#" class="instagram-login">Continue como *****</a>
+                <a href="#" class="instagram-login">Continuar como ggibamede</a>
                 <a href="#" class="instagram-logout">Remover conta</a>
             </div>
             <div class="group">
-                <p class="not-account">Não é *****</p>
+                <p class="not-account">Não é ggibamede ?</p>
                 <p class="not-account">
-                    <span class="link-blue">Alternar Contas</span>
+                    <span class="link-blue">Trocar de conta</span>
                     ou 
                     <span class="link-blue">Inscreva-se</span>
                 </p>
